--- a/source/form.html
+++ b/source/form.html
@@ -7,8 +7,8 @@
     <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона</title>
 </head>
-  
-<svg>
+
+<svg style="display: none">
   <symbol viewBox="0 0 17.5 14.663" id="social__item-twitter">
     <g id="W6EeEF_1_">
       <g>
@@ -27,7 +27,7 @@
     <path d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.835-2.835V2.835 C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z"/>
   </symbol>
   <symbol viewBox="0 0 60 60" id="icon-htmlacademy">
-    <path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 
+    <path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2
     10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2
     1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1
     10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
@@ -160,7 +160,7 @@
       <a class="social__item" href="">
         Youtube
         <svg version="1.0" x="0px" y="0px" width="19.979px" height="14.015px" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
-          <use xlink:href="#social__item-youtube"></use> 
+          <use xlink:href="#social__item-youtube"></use>
         </svg>
       </a>
     </div>
@@ -168,7 +168,7 @@
       <a class="realizer__icon" href="https://htmlacademy.ru/intensive/adaptive">
         Htmlacademy
         <svg>
-          <use xlink:href="#icon-htmlacademy"></use>  
+          <use xlink:href="#icon-htmlacademy"></use>
         </svg>
       </a>
     </p>
