--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="preload" href="../build/css/style.min.css" as="style">
+    <link rel="preload" href="css/style.min.css" as="style">
     <link rel="preload" href="fonts/ptsans.woff2" as="font">
     <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
     <link href="css/style.css" rel="stylesheet">
@@ -20,22 +20,22 @@
   <header class="page-header">
     <a class="page-header__logo">
       <picture>
-        <source media="(min-width: 1200px)" srcset="/img/logo-sedona-desktop.svg">
-        <source media="(min-width: 768px)" srcset="/img/logo-sedona-tablet.svg">
-        <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" alt="Логотип">
+        <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+        <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Логотип">
       </picture>
     </a>
     <nav class="main-nav main-nav--closed">
       <button class="main-nav__toggle" type="button">Открыть</button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
-          <a class="main-nav__link" href="http://localhost:3000/">Главная</a>
+          <a class="main-nav__link" href="https://dis500.github.io/">Главная</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link" href="http://localhost:3000/photo.html">Фото и видео</a>
+          <a class="main-nav__link" href="https://dis500.github.io/photo">Фото и видео</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--active" href="http://localhost:3000/form.html">Форма отзыва</a>
+          <a class="main-nav__link main-nav__link--active" href="#">Форма отзыва</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="https://htmlacademy.ru/">Html Academy</a>
@@ -157,7 +157,7 @@
   <div class="failur-popup">
     <div class="failur-popup__wrapper">
       <p class="failur-popup__title">Что-то пошло не так!</p>
-      <p class="failur-popup__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+      <p class="failur-popup__text">Проверьте поля, помеченные *, скорее всего вы забыли их заполнить</p>
       <button class="failur-popup__btn btn-item">Ок</button>
     </div>
   </div>
@@ -172,39 +172,5 @@
   </div>
   </div>
   <script src="js/menu-toggle.js"></script>
-  <script>
-    var popup = document.querySelector(".failur-popup");
-    var successPopup = document.querySelector(".success-popup");
-    var close = popup.querySelector(".btn-item");
-    var form = document.querySelector("form");
-    var name = form.querySelector("[name=name]");
-    var lastName = form.querySelector("[name=last-name]");
-    var number = form.querySelector("[name=number]");
-    var email = form.querySelector("[name=email]");
-
-   /* form.addEventListener("submit", function (evt) {
-      if (!name.value || !lastName.value || !number.value || !email.value) {
-        evt.preventDefault();
-        popup.classList.add("popup--show");
-        console.log("Заполнить форму");
-      }else{
-        evt.preventDefault();
-        popup.classList.add("popup--show");
-        console.log("Форма отправлена");
-      }
-    }) */
-    
-    form.addEventListener("submit", function (evt){
-    if (name.value == "" || name.value == " "){
-      evt.preventDefault();
-      successPopup.classList.add("popup--show");
-      console.log("Форма отправлена");
-    }
-    });
-
-    close.addEventListener("click", function(event) {
-        event.preventDefault();
-        popup.classList.remove("popup--show");
-      });
-  </script>
+  <script src="js/form.js"></script>
 </body>
