--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="preload" href="../build/css/style.min.css" as="style">
+    <link rel="preload" href="css/style.min.css" as="style">
     <link rel="preload" href="fonts/ptsans.woff2" as="font">
     <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
     <link href="css/style.css" rel="stylesheet">
@@ -20,9 +20,9 @@
   <header class="page-header">
     <a class="page-header__logo">
       <picture>
-        <source media="(min-width: 1200px)" srcset="/img/logo-sedona-desktop.svg">
-        <source media="(min-width: 768px)" srcset="/img/logo-sedona-tablet.svg">
-        <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" alt="Логотип">
+        <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+        <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Логотип">
       </picture>
     </a>
     <nav class="main-nav main-nav--closed">
@@ -32,10 +32,10 @@
           <a class="main-nav__link main-nav__link--active" href="#">Главная</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link" href="http://localhost:3000/photo.html">Фото и видео</a>
+          <a class="main-nav__link" href="https://dis500.github.io/photo">Фото и видео</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link" href="http://localhost:3000/form.html">Форма отзыва</a>
+          <a class="main-nav__link" href="https://dis500.github.io/form">Форма отзыва</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="https://htmlacademy.ru/">Html Academy</a>
@@ -128,7 +128,7 @@
       <a class="order__button btn-item" href="#">Найти гостиницу</a>
     </div>
     <div class="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050598407!2d-111.83015803882583!3d34.85437338102037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1522174181075" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050598407!2d-111.83015803882583!3d34.85437338102037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1522174181075" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
   </main>
   <footer class="page-footer">
