--- a/source/photo.html
+++ b/source/photo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="preload" href="../build/css/style.min.css" as="style">
+    <link rel="preload" href="css/style.min.css" as="style">
     <link rel="preload" href="fonts/ptsans.woff2" as="font">
     <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
     <link href="css/style.css" rel="stylesheet">
@@ -20,22 +20,22 @@
   <header class="page-header">
     <a class="page-header__logo">
       <picture>
-        <source media="(min-width: 1200px)" srcset="/img/logo-sedona-desktop.svg">
-        <source media="(min-width: 768px)" srcset="/img/logo-sedona-tablet.svg">
-        <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" alt="Логотип">
+        <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+        <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Логотип">
       </picture>
     </a>
     <nav class="main-nav main-nav--closed">
       <button class="main-nav__toggle" type="button">Открыть</button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
-          <a class="main-nav__link" href="http://localhost:3000/">Главная</a>
+          <a class="main-nav__link" href="https://dis500.github.io/">Главная</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link main-nav__link--active" href="#">Фото и видео</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link" href="http://localhost:3000/form.html">Форма отзыва</a>
+          <a class="main-nav__link" href="https://dis500.github.io/form">Форма отзыва</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="https://htmlacademy.ru/">Html Academy</a>
